--- a/client/package.json
+++ b/client/package.json
@@ -29,5 +29,5 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
-  "proxy": "http://localhost:3000/"
+  "proxy": "http://localhost:3000"
 }
