--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
